<resources>
    <string name="app_name">feedreader</string>
    <string name="authorString">by %s</string>
    <string name="view_full_article"><u>VIEW FULL ARTICLE</u></string>

    <!--
        All possible calendar strings.
        Uses String.Format() for Date formatting.
     -->
    <string name="calendar_lessThanHour">%d minutes ago</string>
    <string name="calendar_lessThanDay">%d hours ago</string>
    <string name="calendar_yesterday">Yesterday</string>
    <string name="calendar_lessThanWeek">%d days ago</string>
    <string name="calendar_moreThanWeek">%1$tb %1$te, %1$tY</string>

    <string name="shareSubject">Article to read: %s</string>
    <string name="shareText">Check this article here: %s</string>
    <string name="shareIntent">Share using</string>

    <!-- ActivityNewsList menu -->
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
    <string name="itemConfigureFeeds">Configure feeds</string>
    <string name="itemSync">Synchronize</string>

    <!-- ActivityChosenArticle menu -->
    <string name="itemShare">Share</string>
    <string name="itemAddFeed">Add feed</string>
    <string name="urlInputHing">Feed URL</string>
    <string name="addFeedHeader">Add Feed</string>
    <string name="addFeedAccept">Add</string>
    <string name="rssNotFound">RSS feed not found</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="feedDeleteText">Do you want to delete the feed?</string>
    <string name="removeDialogDelete">Delete</string>
    <string name="dialogButtonCancel">Cancel</string>
    <string name="dialogAddFeed">Add</string>
    <string name="syncProgress">Loading...</string>
    <string name="DialogFeedAdded">Feed added</string>
    <string name="DialogFeedWrong">Did not find RSS feed on given URL</string>
    <string name="DialogFeedDuplicate">This feed already exists.</string>
    <string name="DialogFeedDeleted">Feed deleted</string>
    <string name="articlesHelp">Select an article on the left.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wifiCheckHeading">Background sync only on Wifi</string>
    <string name="wifiCheckText">Synchronizes the feeds on background only when connected to WiFi</string>
</resources>
