<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemSyncIcon"
        android:icon="@drawable/ic_refresh_article_icon"
        android:title="@string/itemSync"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemSyncProgress"
        android:orderInCategory="100"
        android:title="@string/syncProgress"
        android:visible="false"
        app:actionLayout="@layout/action_view_progress"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemConfigureFeeds"
        android:title="@string/itemConfigureFeeds" />
    <item
        android:id="@+id/itemAbout"
        android:title="@string/about" />
    <item
        android:id="@+id/itemPreferences"
        android:title="@string/preferences" />
</menu>